svcdatadir = $(pkgdatadir)/sr

cert_FILES = \
	certs/InCommonServerCA.pem \
	certs/exo-nicta-am.pem \
	certs/genidesktop.netlab.uky.edu.pem \
    certs/gpo-of.pem \
    certs/gr-bbn1-am.pem \
    certs/gr-bbn1-ch.pem \
	certs/i2-of.pem \
	certs/irods.pem \
	certs/irods-test.pem \
	certs/nlr-of.pem \
	certs/uen-of.pem

nobase_dist_svcdata_DATA = $(cert_FILES)
